# learner-examples

./: .gitignore  README.html  README.md  README.txt  clean.sh
LLM/: pyproject.toml
LLM/LLM/: learner.py
ballistics/: pyproject.toml
cellular-automata/: pyproject.toml
diabetes/: learner.py  wrangler.py
equation-validity/: pyproject.toml
iris/: .env  .env_template  Dockerfile  README.md  README.txt  clean.sh  devops.sh  docker-compose.yml  dockerize.sh  learner.py  predict.py  pyproject.toml  run.sh  serve_run.sh  wrangler.py
iris/iris/: cloud_params.json  cloud_params_template.json  learner.py  wrangler.py
iris/tests/: test_learner.py
quadrant/: pyproject.toml
sequence/: pyproject.toml
starter-code/: clean.sh  learner.py
starter-code/starter_code/: learner.py  wrangler.py
